--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,5 +26,5 @@ jobs:
             cd /home/ubuntu/Mediledger-backend
             git pull origin main
             npm install
-            pm2 restart all || pm2 start server.js
+            pm2 restart all || pm2 start src/server.js
           EOF
