--- a/package.json
+++ b/package.json
@@ -11,20 +11,24 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@pinata/sdk": "^2.1.0",
     "@prisma/client": "^6.10.1",
     "apollo-server": "^3.13.0",
     "apollo-server-express": "^3.13.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
+    "ethers": "^6.15.0",
     "express": "^4.21.2",
     "express-jwt": "^8.5.1",
     "express-session": "^1.18.1",
     "graphql": "^16.11.0",
     "graphql-type-json": "^0.3.2",
+    "hardhat": "^3.0.6",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.2.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "prisma": "^6.10.1"
+    "prisma": "^6.10.1",
+    "web3": "^4.16.0"
   }
 }
